--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
-.App {
+/* App.css */
+.app-container {
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 20px;
   text-align: center;
+  font-size: 14px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.member-table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+  border: 1px solid #ddd;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.member-table th, .member-table td {
+  padding: 8px;
+  text-align: left;
+  border-bottom: 1px solid #ddd; 
+  border-right: none; 
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.member-table tbody tr:last-child td {
+  border-bottom: 2px solid rgb(21, 128, 98); 
+}
+
+.thread {
+  background-color:rgb(21, 128, 98) ;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+div {
+  margin-top: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+  padding: 8px;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border-radius: 5px;
+  margin-right: 15px;
+  background-color: rgb(21, 128, 98);
+  color: white;
+  border: none;
 }
+span {
+  display: inline-block;
+  padding: 8px;
+  padding-top: 5px;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: 15px;
+  background-color: rgb(21, 128, 98);
+  color: white;
+  border-radius: 5px; 
+}
+
